exports[`ellipsis should default max-width to 100% 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should pass parameter to the value of max-width 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "300px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should properly add rules when block has existing rules 1`] = `
Object {
  "background": "red",
  "display": "inline-block",
  "maxWidth": "300px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;
